# Yubi-goblin

./: .gitignore  Cargo.toml  README.md  build.rs  release.config.js
.github/workflows/: release.yml
src/: main.rs
src/install/: apt.rs  mod.rs
src/models/: consts.rs  mod.rs  models.rs
src/rest/: consts.rs  dependencies.rs  doc.rs  mod.rs  ui.rs  users.rs  yubikey.rs
src/system/: backup.rs  mod.rs  users.rs  yubikey.rs
src/utils/: desktop.rs  image.rs  mod.rs  root.rs
