[package]
name = "yubi-goblin"
version = "0.0.1"
edition = "2021"
readme = "README.md"
resolver = "2"
description = "Yubi goblin application"

[dependencies]
anyhow = "1.0.94"
env_logger = "0.11.5"
serde_yaml = "0.9.34"
tao = "0.31.0"
tokio = { version = "1.37.0", features = ["full", "test-util"] }
wry = "0.47.2"
log = "0.4.22"
actix-web = "4.9.0"
mime = "0.3.17"
nix = { version = "0.29.0", features = ["user"] }
image = "0.25.5"
ctrlc = "3.4.5"
xdg = "2.5.2"

[profile.release]
# Link time optimisations https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = true
# Strip debugging symbols https://doc.rust-lang.org/cargo/reference/profiles.html#strip
strip = true
# Reduce build parallelisation but faster compiled binary https://doc.rust-lang.org/cargo/reference/profiles.html#codegen-units
codegen-units = 1

[build-dependencies]
embed-resource = "3.0.1"
